--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NW26 CORE</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <script src="core.min.js"></script>
 </head>
 <body>
   <div class="app">
@@ -12,7 +13,6 @@
     <main>
       <section id="studio">Loading elite studio...</section>
     </main>
-    <script src="core.min.js"></script>
   </div>
 </body>
 </html>
